testsuite/tests/properties/invalid_struct_update/not_a_struct/test.lkt
from common import FooNode, KV

class Example: FooNode implements TokenNode {
    @exported fun increment(kv: KV): KV = node.update(value=kv)
}
